--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -48,7 +48,7 @@ opacity: 0.5;
 }
 
 .layout__header h1 {
-  margin: 5px 0;
+  margin: 0;
     padding: 0 0 0 10px;
     color: white;
     text-transform: uppercase;
@@ -71,12 +71,12 @@ opacity: 0.5;
 }
 
 .layout__header h2 {
-  font-size: 5px;
+  font-size: 8px;
     color: #33cccc;
     text-transform: uppercase;
-    letter-spacing: 10px;
+    letter-spacing: 12px;
     padding: 0 12px;
-    margin: 10px 0 30px;
+    margin: 0 0 30px;
 }
 
 #data-container {
