--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -305,7 +305,8 @@ text-shadow: 2px 2px #000000;
 }
 
 #mapcontainer,   #map {
-height: 100vh}
+height: calc(100% - 2px)
+}
 
 .layout__data {
   width: 40%;
