--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -72,11 +72,11 @@ opacity: 0.5;
 
 .layout__header h2 {
   font-size: 8px;
-    color: #33cccc;
-    text-transform: uppercase;
-    letter-spacing: 12px;
-    padding: 0 12px;
-    margin: 0 0 30px;
+  color: #33cccc;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  padding: 2px 0;
+  margin: 0;
 }
 
 #data-container {
