--- a/map.njk
+++ b/map.njk
@@ -1,7 +1,8 @@
 ---
 layout: layouts/telesthesia-base.njk
 ---
-
+ <div id="crosshair-h" class="hair"></div>
+  <div id="crosshair-v" class="hair"></div>
 <div class="layout">
 
   <div class="layout__header">
