--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -304,8 +304,8 @@ text-shadow: 2px 2px #000000;
   margin-top: -3px;
   margin-left: -2px;
   background: transparent;
-  border-top: 1px dotted #000;
-  border-left: 1px dotted #000;
+  border-top: 1px dotted #1f6971;
+  border-left: 1px dotted #1f6971;
   pointer-events: none;
   z-index: 2;
 }
