--- a/index.njk
+++ b/index.njk
@@ -2,6 +2,10 @@
 layout: layouts/telesthesia-base.njk
 ---
 
+<button onclick="signInWithGoogle()">
+  Login with Google
+</button>
+
 <div class="main-nav">
     <a href="/map">
         <div class="main-nav__item">
