--- a/map.njk
+++ b/map.njk
@@ -33,3 +33,6 @@ layout: layouts/telesthesia-base.njk
 
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
+<script>
+     checkAuthentication();
+</script>
