--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -37,5 +37,6 @@
      data-logo_alignment="left">
 </div>
     <!-- Current page: {{ page.url | url }} -->
+    <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
   </body>
 </html>
