--- a/map.njk
+++ b/map.njk
@@ -21,7 +21,7 @@ layout: layouts/telesthesia-base.njk
     <div class="content-container">
 
        <div id="console" class="panel">
-        <div id="console__timer"></div>
+        <div id="countdown__timer"></div>
                 <div id="console__text" data-ty-prefix="> "><span>Welcome to the TELESTHESIA system.</span><span>Select a location to take an energy reading.</span></div>
                 <div id="console__image" class="scanlines"></div>
             </div>
