--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -36,6 +36,13 @@ html, body, main, #map, #mapcontainer {
   filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%) opacity(0.5) grayscale(100%);
   -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%) opacity(0.5) grayscale(100%);
 }
+.recharging .layout__map {
+  border: 1px solid #464646;
+}
+
+.recharging main {
+  border: 10px solid #3e3e3e;
+}
 
 #map::after {
     content: "";
