--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,12 @@
 ---
 layout: layouts/telesthesia-base.njk
 ---
+
+  <div class="layout__header">
+    <h1>telesthesia</h1>
+    <h2>Institute</h2>
+  </div>
+  
 <div class="main-nav">
     <a href="/map">
         <div class="main-nav__item">
