--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -248,7 +248,7 @@ text-shadow: 2px 2px #000000;
 
 .main-nav {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 70px auto 0;
 }
 
 .main-nav a {
