--- a/index.njk
+++ b/index.njk
@@ -6,8 +6,15 @@ layout: layouts/telesthesia-base.njk
     <h1>telesthesia</h1>
     <h2>Institute</h2>
   </div>
-  
+
 <div class="main-nav">
+
+
+<div>
+    <h1>Welcome to the Telesthesia Institute</h1>
+</div>
+
+
     <a href="/map">
         <div class="main-nav__item">
             <h2><span>Map</span></h2>
