--- a/index.njk
+++ b/index.njk
@@ -11,7 +11,8 @@ layout: layouts/telesthesia-base.njk
 
 
 <div>
-    <h1>Welcome to the Telesthesia Institute</h1>
+    <h1>Training the next generation of psychcic investigators</h1>
+    <p>Read and interpret remote viewings to find locations across the world and earn exclusive ranking badges.</p>
 </div>
 
 
