--- a/index.njk
+++ b/index.njk
@@ -25,7 +25,7 @@ layout: layouts/telesthesia-base.njk
 
     <a href="/viewings">
         <div class="main-nav__item">
-            <h2><span>Viewings</span></h2>
+            <h2><span>Latest Viewings</span></h2>
             <p>Read the viewings</p>
         </div>
     </a>
@@ -36,6 +36,15 @@ layout: layouts/telesthesia-base.njk
             <p>See the stats</p>
         </div>
     </a>
+
+        <a href="/guide">
+        <div class="main-nav__item">
+            <h2><span>Guide</span></h2>
+            <p>Find out what its about</p>
+        </div>
+    </a>
+
+
 
 
     </div>
