--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -71,6 +71,7 @@ opacity: 0.5;
   transform: translate(-50%, -50%);
   text-align: center;
   min-height: 20px;
+  z-index: 99999999;
 }
 
 .layout__header h1 {
